--- a/views/directors/_form_fields.ejs
+++ b/views/directors/_form_fields.ejs
@@ -1,4 +1,8 @@
 <div>
+    <label>Icon</label>
+    <input type="file" name="icon" class="filepond">
+</div>
+<div>
     <label>Name</label>
     <input type="text" name="name" value="<%= director.name %>">
 </div>
