--- a/views/directors/show.ejs
+++ b/views/directors/show.ejs
@@ -1,4 +1,5 @@
 <h2><%= director.name %></h2>
+<img width="150" height="150" src="<%= director.iconImagePath %>">
 <div>Rating: <%= director.rating %></div>
 <div>Description: <%= director.description %></div>
 <div>Additional Notes: <%= director.notes %></div>
