--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/filepond@4/dist/filepond.css" rel="stylesheet" />
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet" />
-    <title>Mybrary</title>
+    <title>CineSeen</title>
 </head>
 <body>
     <br>
