--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -1,4 +1,4 @@
-<h2>Movie</h2>
+<h2 class="page-header">Movie</h2>
 <form action="/movies" method="POST">
     <%- include('_form_fields') %>
     <a href="/movies">Cancel</a>
