--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">CineSeen</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">CineSeen</a>
         <ul>
             <li><a href="/directors">Directors</a></li>
             <li><a href="/directors/new">Add Director</a></li>
