--- a/views/directors/edit.ejs
+++ b/views/directors/edit.ejs
@@ -1,6 +1,6 @@
-<h2>Edit Director</h2>
+<h2 class="page-header">Edit Director</h2>
 <form action="/directors/<%= director.id %>?_method=PUT" method="POST">
     <%- include('_form_fields')%>
     <a href="/directors/<%= director.id %>">Cancel</a>
-    <button type="submit">Update</button>
+    <button class="button button-primary" type="submit">Update</button>
 </form>
