--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= movie.title %></h2>
+<h2 class="page-header"><%= movie.title %></h2>
 <img width="100" height="150" src="<%= movie.posterImagePath %>">
 <div>Director: <%= movie.director.name %></div>
 <div>Release Date: <%= movie.releaseDate.toDateString() %></div>
