--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,8 +1,14 @@
 <h2 class="page-header">Search Directors</h2>
 <form action="/directors" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%= searchOptions.name ? searchOptions.name : '' %>">
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-item">
+            <label>Name</label>
+            <input type="text" name="name" value="<%= searchOptions.name ? searchOptions.name : '' %>">
+        </div>
+    </div>
+    <div class="form-row form-row-end">
+        <button class="button button-primary" type="submit">Search</button>
+    </div>
 </form>
 <br>
 <% if(directors && directors.length > 0) { %>
