--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -1,6 +1,8 @@
 <h2 class="page-header">New Director</h2>
 <form action="/directors" method="POST">
     <%- include('_form_fields')%>
-    <a href="/directors">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end button-row">
+        <a class="button button-danger" href="/directors">Cancel</a>
+        <button class="button button-primary" type="submit">Create</button>
+    </div>
 </form>
