--- a/views/movies/_form_fields.ejs
+++ b/views/movies/_form_fields.ejs
@@ -1,33 +1,39 @@
-<div>
-    <label>Title</label>
-    <input type="text" name="title" value="<%= movie.title %>">
+<div class="form-row">
+    <div class="form-item">
+        <label>Title</label>
+        <input type="text" name="title" value="<%= movie.title %>">
+    </div>
+    <div class="form-item">
+        <label>Director</label>
+        <select name="director">
+            <% directors.forEach(director => { %>
+            <% if (director.id === movie.director) { %>
+                    <option selected label="<%= director.name %>" value="<%= director.id %>"></option>
+            <% } else { %>
+                <option label="<%= director.name %>" value="<%= director.id %>"></option>
+            <% } %>
+            <% }) %>
+        </select>
+    </div>
 </div>
-<div>
-    <label>Director</label>
-    <select name="director">
-    <% directors.forEach(director => { %>
-        <% if (director.id === movie.director) { %>
-            <option selected label="<%= director.name %>" value="<%= director.id %>"></option>
-        <% } else { %>
-        <option label="<%= director.name %>" value="<%= director.id %>"></option>
-        <% } %>
-    <% }) %>
-    </select>
-</div>
-<div>
-    <label>Release Date</label>
-    <input type="date" name="releaseDate" 
+<div class="form-row">
+    <div class="form-item">
+        <label>Release Date</label>
+        <input type="date" name="releaseDate" 
         value="<%= movie.releaseDate == null ? '' : movie.releaseDate.toISOString().split('T')[0] %>">
+    </div>
+    <div class="form-item">
+        <label>Runtime (minutes)</label>
+        <input type="number" name="runtime" min="1" value="<%= movie.runtime %>">
+    </div>
 </div>
-<div>
-    <label>Runtime (minutes)</label>
-    <input type="number" name="runtime" min="1" value="<%= movie.runtime %>">
-</div>
-<div>
-    <label>Poster</label>
-    <input type="file" name="poster" class="filepond">
-</div>
-<div>
-    <label>Description</label>
-    <textarea name="description"><%= movie.description %></textarea>
+<div class="form-row">
+    <div class="form-item form-item-no-grow">
+        <label>Poster</label>
+        <input type="file" name="poster" class="filepond">
+    </div>
+    <div class="form-item">
+        <label>Description</label>
+        <textarea name="description"><%= movie.description %></textarea>
+    </div>
 </div>
