--- a/views/directors/_form_fields.ejs
+++ b/views/directors/_form_fields.ejs
@@ -11,7 +11,7 @@
 <div class="form-row">
     <div class="form-item form-item-no-grow">
         <label>Icon</label>
-        <input type="file" name="icon" class="filepond">
+        <input type="file" name="icon" class="movie-poster filepond">
     </div>
     <div class="form-item">
         <label>Description</label>
