--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -20,10 +20,7 @@
         <button class="button button-primary" type="submit">Search</button>
     </div>
 </form>
+<br>
 <div>
-    <% movies.forEach(movie => { %>
-        <a href="/movies/<%= movie.id %>">
-            <img height="150" width="100" src="<%= movie.posterImagePath %>">
-        </a>
-    <% }) %>
+    <%- include('../partials/movieGrid', { movies: movies, large: true }) %>
 </div>
