--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -1,4 +1,4 @@
-<h2 class="page-header">Movie</h2>
+<h2 class="page-header">New Movie</h2>
 <form action="/movies" method="POST">
     <%- include('_form_fields') %>
     <div class="form-row form-row-end button-row">
