--- a/views/movies/_form_fields.ejs
+++ b/views/movies/_form_fields.ejs
@@ -30,7 +30,7 @@
 <div class="form-row">
     <div class="form-item form-item-no-grow">
         <label>Poster</label>
-        <input type="file" name="poster" class="filepond">
+        <input type="file" name="poster" class="movie-poster filepond">
     </div>
     <div class="form-item">
         <label>Description</label>
