--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -1,10 +1,21 @@
 <h2 class="page-header"><%= movie.title %></h2>
-<img width="100" height="150" src="<%= movie.posterImagePath %>">
-<div>Director: <%= movie.director.name %></div>
-<div>Release Date: <%= movie.releaseDate.toDateString() %></div>
-<div>Runtime: <%= movie.runtime %> minutes</div>
-<div>Description: <%= movie.description %></div>
-
-<a href="/movies/<%= movie.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm.ejs', { url: `/movies/${movie.id}` }) %>
-<a href="/directors/<%= movie.director.id %>">View Director</a>
+<div class="movie-details">
+    <div>
+        <img class="movie-poster" src="<%= movie.posterImagePath %>">
+        <div class="movie-details-button-grid">
+            <a class="button button-primary" href="/movies/<%= movie.id %>/edit">Edit</a>
+            <%- include('../partials/deleteForm.ejs', { url: `/movies/${movie.id}` }) %>
+            <a class="button button-primary movie-details-director-button" href="/directors/<%= movie.director.id %>">View Director</a>
+        </div>
+    </div>
+    <div class="movie-details-grid">
+        <div class="movie-details-label">Director: </div>
+        <div><%= movie.director.name %></div>
+        <div class="movie-details-label">Release Date: </div>
+        <div><%= movie.releaseDate.toDateString() %></div>
+        <div class="movie-details-label">Runtime: </div>
+        <div><%= movie.runtime %> minutes</div>
+        <div class="movie-details-label">Description: </div>
+        <div><%= movie.description %></div>
+    </div>
+</div>
